--- a/slackr/package.json
+++ b/slackr/package.json
@@ -7,7 +7,10 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.3"
+    "enzyme": "^2.8.2",
+    "jest-enzyme": "^3.1.1",
+    "react-scripts": "1.0.3",
+    "react-test-renderer": "^15.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
