--- a/slackr/package.json
+++ b/slackr/package.json
@@ -7,9 +7,10 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "enzyme": "^2.8.2",
-    "jest-enzyme": "^3.1.1",
-    "react-scripts": "1.0.3",
+    "enzyme": "^2.9.0",
+    "jest-enzyme": "^3.4.0",
+    "npm-check-updates": "^2.12.0",
+    "react-scripts": "1.0.7",
     "react-test-renderer": "^15.5.4"
   },
   "scripts": {
