--- a/hello/package.json
+++ b/hello/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "enzyme": "^2.8.2",
