--- a/slackr/package.json
+++ b/slackr/package.json
@@ -6,7 +6,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "enzyme": "^2.9.0",
