upgrade deps, add Salutation test

--- a/hello/package.json
+++ b/hello/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^2.9.1",
+    "jest-enzyme": "^3.5.3",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-test-renderer": "^15.6.1"
   },
   "devDependencies": {
-    "react-scripts": "0.9.3"
+    "react-scripts": "1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
