--- a/slackr/package.json
+++ b/slackr/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
