--- a/slackr/package.json
+++ b/slackr/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "enzyme": "^2.9.0",
